# dcsget

./: .env  .gitignore  Cargo.toml  database.db
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/entities/: game.rs  mod.rs  prelude.rs
