[package]
name = "dcsget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
dotenv = "0.15.0"

[dependencies.sea-orm]
version = "0.9.2"
features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ]
default-features = false